Fix broken post details

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1302,7 +1302,7 @@ fieldset
 		font-size: 0.9em
 		color: lighten($color_text, 20%)
 		margin: 0
-		padding: 10px 0 20px 0
+		padding: 10px 20px 20px 20px
 		+user-select-none
 		+pointer-events-none
 
