Correct misalignment on post view

--- a/blender-today/application/templates/posts/_macros.html
+++ b/blender-today/application/templates/posts/_macros.html
@@ -35,7 +35,7 @@
 						<i class="fa fa-chevron-down"></i>
 					</a>
 					<span class="separator"></span>
-					<span class="rating">{{comment.rating_delta}}</span>
+					<span class="rating" title="Comment Points">{{comment.rating_delta}}</span>
 					<span class="separator"></span>
 					<span title="{{comment.creation_date.strftime('%H:%M on %d %B, %Y')}}">{{comment.pretty_creation_date}}</span>
 					<small>by</small> {{comment.user.first_name}} {{comment.user.last_name}}
