--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -1042,7 +1042,11 @@ footer
 	padding-top: 20px
 	color: lighten(desaturate($color_brand_main, 20%), 20%)
 	font-size: 0.85em
-	+user-select-none	
+	text-align: center
+	padding-bottom: 20px
+	+user-select-none
+	& a
+		color: lighten(desaturate($color_brand_main, 20%), 20%)
 
 /* Boostrap overrides */
 /* NAVTABS */
