--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -95,19 +95,10 @@
 
     <footer>
       <div class="container">
-        <span class="pull-left">
-          <p class="text-center">
-            Made with <i class="fa fa-heart-o"></i> in Amsterdam
-          </p>
-        </span>
-        <span class="pull-right">
-          <p>
-            <a href="http://twitter.com/BlenderToday"
-               title="Follow *yourself* on Twitter @BlenderToday">@BlenderToday</a>
-            <span class="separator"></span>
-            <a href="#hop"><i class="fa fa-angle-up"></i></a>
-          </p>
-        </span>
+          Made with <i class="fa fa-heart-o"></i> in Amsterdam
+          - 2015
+          - Cutest mug by <a href="http://www.manujarvinen.com/" target="_blank">Manu</a>
+          - 404 by <a href="http://www.artificial3d.com/" target="_blank">Andy</a>
       </div> <!-- /footer-container -->
     </footer>
 
