--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -64,8 +64,10 @@
           <h3>About</h3>
           <p>
             In a nutshell, Blender.Today is community-driven <a href="http://www.blender.org">Blender</a> news.
+          </p>
+          <p>
             If you don't know what <a href="http://www.blender.org">Blender</a> is,
-            then you should probably go, or not! Stay and learn, we have cookies.
+            then you should probably go, or not! Stay and hangout, we have cookies.
             Just keep in mind this site is run by the community. You're free to share
             what's up, upvote the awesomeness or even downvote if it's not your thing.
           </p>
@@ -77,7 +79,7 @@
           <h3>Contact</h3>
           <p>
             We're on Twitter <a href="http://twitter.com/BlenderToday">@BlenderToday</a>,
-            or <a href="http://facebook.com/BlenderToday">facebook.com/BlenderToday</a> if you're into that.
+            or <a href="http://facebook.com/BlenderToday">Facebook</a> too, if you're into that.
           </p>
           <hr/>
           <h3>Moar Blender Stuff</h3>
