Also for comments

--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -590,7 +590,10 @@ a
 		&.bfct_trainer
 			font-size: 0.8em
 			left: 4px
-
+		&.cloud_member
+			font-size: 1.1em
+			left: 4px
+			color: lighten($color_text, 20%)
 
 .post-view-comments
 	padding: 0
