Links to About, Terms, and FAQ

--- a/blender-today/application/templates/layout.html
+++ b/blender-today/application/templates/layout.html
@@ -97,10 +97,13 @@
 
     <footer>
       <div class="container">
-          Made with <i class="fa fa-heart-o"></i> in Amsterdam
-          - 2015
-          - Cutest mug by <a href="http://www.manujarvinen.com/" target="_blank">Manu</a>
-          - 404 by <a href="http://www.artificial3d.com/" target="_blank">Andy</a>
+          <a href="{{url_for('about')}}">About</a>
+          · <a href="{{url_for('faq')}}">FAQ</a>
+          · <a href="{{url_for('terms')}}">Terms</a>
+          · Made with <i class="fa fa-heart-o"></i> in Amsterdam
+          · Blender Today 2015
+          · Cutest mug by <a href="http://www.manujarvinen.com/" target="_blank">Manu</a>,
+            404 by <a href="http://www.artificial3d.com/" target="_blank">Andy</a>
       </div> <!-- /footer-container -->
     </footer>
 
