--- a/blender-today/application/static/sass/main.sass
+++ b/blender-today/application/static/sass/main.sass
@@ -254,6 +254,7 @@ a
 	height: 60px
 	color: white
 	background-color: lighten($color_text, 55%)
+	background-size: cover !important
 	text-align: center
 	position: absolute
 	top: 15px
@@ -307,6 +308,9 @@ a
 	+text-shadow(1px, 1px, 0, darken($color_background, 3%), 1.0)
 	+media-xs
 		font-size: 1.8em
+	& i
+		color: lighten(desaturate($color_brand_main, 20%), 30%)
+		+text-shadow-none
 
 .post-view-rate
 	float: left
@@ -314,7 +318,7 @@ a
 	width: 40px
 	text-align: center
 	padding-top: 10px
-	margin: 0 15px
+	margin: 0 15px 10px 15px
 	+user-select-none
 	& .up, .middle, .down
 		font-size: 1.3em
@@ -630,6 +634,16 @@ a
 	margin: 0
 	border-top: thin solid lighten($color_text, 65%)
 	position: relative
+	& ul
+		list-style-type: none
+		padding-left: 30px
+		& li:before
+			content: '·'
+			font-size: 85%
+			position: relative
+			left: -10px
+			color: lighten($color_text, 20%)
+
 	&.odd
 		background-color: darken(white, 5%)
 		+text-shadow(1px, 1px, 0, white, 0.8)
